      See also Ubuntu bug #48246.
  * Added a hint to use "update-alternatives --set x-www-browser [...]" to
    manually set the x-www-browser alternative to boinc-manager's
    README.Debian. See Ubuntu bug #48766 for more details.
  * Use /usr/bin/python as interpreter for update-boinc-applinks instead of
    /usr/bin/python2.4 and make boinc-client depend on "python (>= 2.3)" to
    remove the unnecessary strict dependency on python2.4.

 -- Frank S. Thomas <frank@thomas-alfeld.de>  Tue, 13 Jun 2006 08:21:04 +0200

boinc (5.4.9-1) unstable; urgency=low

  [ Frank S. Thomas ]
  * New upstream release.
    - Really fix the connection to a remote machine bug. (closes: #360143)
    - Fix another FTBFS bug with G++ 4.1, thanks again to Martin Michlmayr.
      (closes: #358650)
  * Removed watch file because upstream stopped providing nightly tarballs.
  * debian/control:
    - Bumped Standards-Version from 3.6.2 to 3.7.2, no changes required.
  * debian/patches/:
    - Removed 02_wx2.6-configure.ac.dpatch and 03_wx2.6-with-unicode.dpatch,
      both were included upstream.
    - Updated 07_use-sensible-browser.dpatch to use sensible-browser only,
      because upstream's attempt to start a browser fails miserably. 

 -- Frank S. Thomas <frank@thomas-alfeld.de>  Sat,  6 May 2006 16:41:01 +0200

boinc (5.4.3-1) unstable; urgency=low

  [ Frank S. Thomas ]
  * New upstream release.
    - BOINC Manager: Allow a connection request to reset a connection attempt
      to the local computer or another computer. Thanks to Zlatko Calusic for
      the report. (closes: #360143)
  * debian/control:
    - Improved the short description of all three packages. Thanks to
      Martin Schulze for his suggestions. (closes: #359332)
  * debian/patches/:
    - Removed 01_amd64-gcc4-fixes.dpatch, it was applied upstream.
    - Updated 03_wx2.6-with-unicode.dpatch and 07_use-sensible-browser.dpatch
      for the new upstream release.