@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Debian BOINC Maintainers <pkg-boinc-devel@lists.alioth.debian.org>
 Uploaders: Steffen Moeller <steffen_moeller@gmx.de>, Frank S. Thomas <frank@thomas-alfeld.de>, Christoph Martin <christoph.martin@uni-mainz.de>, Greg Norris <adric@debian.org>
 Standards-Version: 3.7.2
-Build-Depends: debhelper (>= 5), dpatch, zlib1g-dev, libssl-dev, libcurl3-openssl-dev (>= 7.13.2), freeglut3-dev, libsm-dev, libice-dev, libxmu-dev, libxi-dev, libx11-dev, libjpeg62-dev, libwxgtk2.6-dev, automake1.9 (>= 1.9.3), autoconf (>= 2.59), autotools-dev, docbook2x, docbook-xml, dh-buildinfo
+Build-Depends: debhelper (>= 5), dpatch, zlib1g-dev, libssl-dev, libcurl3-openssl-dev (>= 7.13.2) | libcurl-ssl-dev, freeglut3-dev, libsm-dev, libice-dev, libxmu-dev, libxi-dev, libx11-dev, libjpeg62-dev, libwxgtk2.6-dev, automake1.9 (>= 1.9.3), autoconf (>= 2.59), autotools-dev, docbook2x, docbook-xml, dh-buildinfo
 
 Package: boinc-client
 Section: net
